--- a/_config.yml
+++ b/_config.yml
@@ -101,4 +101,6 @@ theme: landscape
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: https://github.com/mh607/HexoNote.git
+  branch: gh-pages
